adding rough focus style for testing and attempting to unify card
running into an issue with the dom ref in base card which requires the forwardRef vs making Card usable in CardView (aka CollectionBuilder)

--- a/packages/@adobe/spectrum-css-temp/components/card/skin.css
+++ b/packages/@adobe/spectrum-css-temp/components/card/skin.css
@@ -66,6 +66,8 @@ governing permissions and limitations under the License.
   &:focus-ring {
     border-color: transparent;
     box-shadow: none;
+    /* TODO: remove, just for testing until the Card structure is finalized */
+    background: grey;
     .spectrum-Card-preview {
       background-color: var(--spectrum-card-quiet-preview-background-color);
 
