--- a/packages/@adobe/spectrum-css-temp/components/card/index.css
+++ b/packages/@adobe/spectrum-css-temp/components/card/index.css
@@ -286,7 +286,7 @@ layer 3:
     block-size: 100%;
     display: grid;
     grid-template-columns: auto minmax(auto, 1fr) auto;
-    grid-template-rows: auto var(--spectrum-card-quiet-body-header-margin-top) auto auto var(--spectrum-card-body-padding-bottom);
+    grid-template-rows: auto var(--spectrum-card-quiet-body-header-margin-top) auto 1fr var(--spectrum-card-body-padding-bottom);
     grid-template-areas: /* can either have three rows of preview or change the spans above? */
       "preview preview preview"
         ".       .       ."
@@ -320,6 +320,8 @@ layer 3:
   }
   .spectrum-Card-image,
   .spectrum-Card-illustration {
+    clip-path: inset(0% 0% 0% 0% round 5px);
+    position: absolute;
     grid-area: preview;
     block-size: 100%;
     inline-size: 100%;
